--- a/app/src/main/res/layout/effects_host_fragment.xml
+++ b/app/src/main/res/layout/effects_host_fragment.xml
@@ -9,25 +9,27 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
-        android:background="@drawable/background_fragment">
+        android:background="@drawable/background_fragment"
+        android:padding="10dp">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <FrameLayout
-                android:layout_width="match_parent"
                 android:id="@+id/effectsFragment"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:padding="0dp">
 
             </FrameLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
                 >
 
                 <Button
