--- a/app/src/main/res/layout/effect_equalizer_fragment.xml
+++ b/app/src/main/res/layout/effect_equalizer_fragment.xml
@@ -60,7 +60,7 @@
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="13dp"
+                    android:layout_marginEnd="6dp"
                     android:layout_marginTop="5dp"
                     android:gravity="center"
                     android:text="@string/fgain"
