--- a/app/src/main/res/drawable/background_recorder_button.xml
+++ b/app/src/main/res/drawable/background_recorder_button.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_pressed="true" android:drawable="@drawable/selected_button_oval"/>
-    <item android:state_focused="true" android:drawable="@drawable/selected_button_oval"/>
+<selector xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item android:state_pressed="true" app:srcCompat="@drawable/ic_start_recorder" android:drawable="@drawable/selected_button_oval"/>
+    <item android:state_focused="true" app:srcCompat="@drawable/ic_start_recorder" android:drawable="@drawable/selected_button_oval"/>
 
     <item android:state_enabled="false" android:drawable="@drawable/ic_start_recorder_enabled"/>
     <item android:state_pressed="false"
