--- a/app/src/main/res/drawable/ic_start_recorder.xml
+++ b/app/src/main/res/drawable/ic_start_recorder.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="#c23737"
+        android:fillColor="@color/superRed"
         android:pathData="M12,12m-10,0a10,10 0,1 1,20 0a10,10 0,1 1,-20 0"/>
 </vector>
