--- a/app/src/main/res/layout/content_project.xml
+++ b/app/src/main/res/layout/content_project.xml
@@ -29,14 +29,14 @@
             android:id="@+id/mainAreaContainer"/>
 
         <view
-            android:layout_width="match_parent"
-            class="com.sunflower.catchtherainbow.Views.AudioVisualizerView"
             android:id="@+id/audioVisualizerView"
+            class="com.sunflower.catchtherainbow.Views.AudioVisualizerView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_centerHorizontal="true"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
             android:layout_weight="0.15"
-            android:layout_height="0dp"
             />
     </LinearLayout>
 
@@ -51,64 +51,99 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"><![CDATA[
         android:layout_width="75dp">
 
-        <ImageButton
-            android:id="@+id/playPrev"
-            android:layout_width="30dp"
-            android:layout_height="32dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@null"
-            android:text="Prev"
-            android:textColor="@color/colorForeground"
-            android:visibility="gone"
-            app:srcCompat="@drawable/ic_skip_previous"/>
+        ]]>
 
         <ImageButton
-            android:id="@+id/bRecorderStart"
+            android:id="@+id/settings"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/background_recorder_button"
-            android:padding="5dp"
-            android:scaleType="fitCenter"
-            />
-
-        <ImageButton
-            android:id="@+id/Sacha"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_gravity="left"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:background="@null"
             android:scaleType="fitCenter"
             android:text="Play"
             android:textColor="@color/colorForeground"
-            app:srcCompat="@drawable/ic_play"/>
+            app:srcCompat="@drawable/ic_settings"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingEnd="70dp">
+
+            <ImageButton
+                android:id="@+id/playPrev"
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@null"
+                android:text="Prev"
+                android:textColor="@color/colorForeground"
+                android:visibility="gone"
+                app:srcCompat="@drawable/ic_skip_previous"/>
+
+            <ImageButton
+                android:id="@+id/bRecorderStart"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:background="@drawable/background_recorder_button"
+                android:padding="5dp"
+                android:scaleType="fitCenter"/>
+
+            <ImageButton
+                android:id="@+id/Sacha"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:background="@null"
+                android:scaleType="fitCenter"
+                android:text="Play"
+                android:textColor="@color/colorForeground"
+                app:srcCompat="@drawable/ic_play"/>
+
+            <ImageButton
+                android:id="@+id/bStop"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:background="@drawable/background_stop_button"
+                android:scaleType="fitCenter"/>
+
+            <ImageButton
+                android:id="@+id/playNext"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@null"
+                android:text="Next"
+                android:textColor="@color/colorForeground"
+                android:visibility="gone"
+                app:srcCompat="@drawable/ic_skip_next"/>
+
+        </LinearLayout><![CDATA[
+
+
+
         android:id="@+id/Sacha"
         android:layout_width="75dp"/>
 
-        <ImageButton
-            android:id="@+id/bStop"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/background_stop_button"
-            android:scaleType="fitCenter"
-            />
 
-        <ImageButton
-            android:id="@+id/playNext"
-            android:layout_width="30dp"
-            android:layout_height="32dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@null"
-            android:text="Next"
-            android:textColor="@color/colorForeground"
-            android:visibility="gone"
-            app:srcCompat="@drawable/ic_skip_next"/>
+
+
 
         />
+
+    ]]>
     </LinearLayout>
+
 </LinearLayout>
