--- a/app/src/main/res/layout/fragment_main_area.xml
+++ b/app/src/main/res/layout/fragment_main_area.xml
@@ -1,10 +1,16 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:id="@+id/main_area"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="com.sunflower.catchtherainbow.Views.Editing.MainAreaFragment">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:id="@+id/main_area"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:context="com.sunflower.catchtherainbow.Views.Editing.MainAreaFragment">
+
+    <com.sunflower.catchtherainbow.Views.Editing.Timeline
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"/>
 
     <ScrollView
         android:id="@+id/verticalScrollView"
@@ -15,6 +21,7 @@
             android:id="@+id/tracks_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:animateLayoutChanges="true"
             android:divider="@android:drawable/divider_horizontal_bright"
             android:orientation="vertical"
             android:showDividers="middle"
@@ -23,4 +30,4 @@
         </TableLayout>
     </ScrollView>
 
-</FrameLayout>
+</LinearLayout>
