--- a/app/src/main/res/layout/export_audio_fragment.xml
+++ b/app/src/main/res/layout/export_audio_fragment.xml
@@ -60,6 +60,55 @@
             android:textAlignment="center"
             android:textSize="20sp"/>
 
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:text="@string/year"
+            android:textColor="@color/colorForeground"
+            android:textSize="20sp"/>
+
+
+        <EditText
+            android:id="@+id/etYear"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/background_textview"
+            android:text="1992"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:ems="10"
+            android:inputType="number"/>
+
+        <LinearLayout
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/background_textview"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:paddingLeft="10dp"
+                android:text="@string/format"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="20sp"/>
+
+            <com.sunflower.catchtherainbow.Views.Helpful.NDSpinner
+                android:id="@+id/spinnerFormatOfFile"
+                android:layout_width="match_parent"
+                android:layout_height="43dp"
+                android:layout_marginRight="5dp"/>
+
+        </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
