Added rendered thread for waveforms. The're drawn very smoothly  on TextureView. Added ruler(for testing). Animations are fast.  Copy/Paste/Cut/Delete functionality is being tested.

--- a/app/src/main/res/layout/fragment_main_area.xml
+++ b/app/src/main/res/layout/fragment_main_area.xml
@@ -7,10 +7,22 @@
               android:orientation="vertical"
               tools:context="com.sunflower.catchtherainbow.Views.Editing.MainAreaFragment">
 
-    <com.sunflower.catchtherainbow.Views.Editing.Timeline
-        android:id="@+id/view"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"/>
+        android:layout_height="30dp"
+        android:orientation="horizontal">
+
+        <Space
+            android:id="@+id/dummy_view"
+            android:layout_width="35dp"
+            android:layout_height="match_parent"/>
+
+        <com.sunflower.catchtherainbow.Views.Editing.Timeline
+            android:id="@+id/view"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
     <ScrollView
         android:id="@+id/verticalScrollView"
