1) по центру имортировать музыку шоб 2) строка на всех языках экспортування 4) добавить обработку всех эффектов 5) отключать эффкты добавлять вырезать вставлять, выделение, кнопка пальчик оставить(методы лок и анлок) 7) анимация viewpager android animation 8) по двойному клику на проект открывать 9) по клику на настройку подсвечивает 10) оставить нужные форматы 11) убрать линейку, когда нет проектов

--- a/app/src/main/res/layout/content_project.xml
+++ b/app/src/main/res/layout/content_project.xml
@@ -63,11 +63,11 @@
             android:layout_gravity="left"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:background="@null"
+            android:background="@drawable/background_settings"
             android:scaleType="fitCenter"
             android:text="Play"
             android:textColor="@color/colorForeground"
-            app:srcCompat="@drawable/ic_settings"/>
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
