--- a/app/src/main/res/layout/fragment_main_area.xml
+++ b/app/src/main/res/layout/fragment_main_area.xml
@@ -1,28 +1,57 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:id="@+id/main_area"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              tools:context="com.sunflower.catchtherainbow.Views.Editing.MainAreaFragment">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/main_area"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context="com.sunflower.catchtherainbow.Views.Editing.MainAreaFragment">
 
     <LinearLayout
+        android:id="@+id/id_message"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="horizontal">
 
-        <Space
-            android:id="@+id/dummy_view"
-            android:layout_width="35dp"
-            android:layout_height="match_parent"/>
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:srcCompat="@drawable/ic_chevron_left"/>
 
-        <com.sunflower.catchtherainbow.Views.Editing.Timeline
-            android:id="@+id/view"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"/>
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/please_import_some_audio"
+            android:textColor="@color/colorForeground"
+            android:textSize="24sp"
+            android:textStyle="bold"/>
     </LinearLayout>
+
+    <LinearLayout
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
+
+        <LinearLayout
+            android:id="@+id/id_liner"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:orientation="horizontal">
+
+            <Space
+                android:id="@+id/dummy_view"
+                android:layout_width="35dp"
+                android:layout_height="match_parent"/>
+
+            <com.sunflower.catchtherainbow.Views.Editing.Timeline
+                android:id="@+id/view"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+        </LinearLayout>
 
     <ScrollView
         android:id="@+id/verticalScrollView"
@@ -43,3 +72,4 @@
     </ScrollView>
 
 </LinearLayout>
+</FrameLayout>
