--- a/app/src/main/res/layout/view_audio_progress.xml
+++ b/app/src/main/res/layout/view_audio_progress.xml
@@ -19,8 +19,8 @@
             android:layout_width="45dp"
             android:layout_gravity="center"/>
 
-        <SeekBar
-            android:layout_width="wrap_content"
+        <com.sunflower.catchtherainbow.Views.Helpful.SuperSeekBar
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/audioSeekBar"
             android:layout_weight="1"
