--- a/app/src/main/res/layout/audio_track_head.xml
+++ b/app/src/main/res/layout/audio_track_head.xml
@@ -93,6 +93,16 @@
             android:animateLayoutChanges="true"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/id_duration"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:gravity="center"
+                android:text="00:00"
+                android:textColor="@color/colorForeground"
+                android:textSize="13sp"/>
+
             <EditText
                 android:id="@+id/track_name_edit"
                 android:layout_width="match_parent"
